Bug 242732 - [iOS] -requestAutocorrectionContextWithCompletionHandler: deadlocks when launching the GPU Process
Summary: [iOS] -requestAutocorrectionContextWithCompletionHandler: deadlocks when laun...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Process Model (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
: 242857 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-13 18:37 PDT by Wenson Hsieh
Modified: 2022-07-18 16:19 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2022-07-13 18:37:12 PDT
rdar://94233518
Comment 1 Wenson Hsieh 2022-07-13 19:00:58 PDT
Pull request: https://github.com/WebKit/WebKit/pull/2399
Comment 2 EWS 2022-07-18 09:27:42 PDT
Committed 252568@main (b85a7ac966f5): <https://commits.webkit.org/252568@main>

Reviewed commits have been landed. Closing PR #2399 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-07-18 09:28:17 PDT
<rdar://problem/97202261>
Comment 4 Sam Sneddon [:gsnedders] 2022-07-18 16:19:43 PDT
*** Bug 242857 has been marked as a duplicate of this bug. ***